--- a/public/emails/joinConfirm.html
+++ b/public/emails/joinConfirm.html
@@ -117,7 +117,7 @@
         overflow: hidden;
       "
     >
-      We're thrilled to have you here! Get ready to dive into your new account.
+      승인완료 알림 메일
     </div>
 
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -148,10 +148,10 @@
                       valign="top"
                       style="padding: 40px 10px 40px 10px"
                     >
-                      <a href={{ mainAddress }} target="_blank">
+                      <a href="{{ serviceHost }}" target="_blank">
                         <img
                           alt="Logo"
-                          src="../logo-transparent.png"
+                          src="{{ serviceHost }}/logo-transparent.png"
                           style="
                             display: block;
                             width: 100px;
@@ -263,9 +263,10 @@
                       "
                     >
                       {{ orgName }} accepted your request!<br />
-                      <a href={{ orgs/[id]/home }} style="text-decoration: none; color: #666666; font-weight: bold;"
-                        >explore page</a
-                      >
+                      <a
+                        href="{{ serviceHost }}/orgs/{{ organizationId }}/home"
+                        style="text-decoration: none; color: #666666; font-weight: bold;"
+                      >Explore page</a>
                     </td>
                   </tr>
                 </table>
@@ -313,25 +314,22 @@
                     >
                       <p style="margin: 0">
                         <a
-                          href={{ orgs/[id]/home }}
+                          href="{{ serviceHost }}/orgs/{{ organizationId }}/home"
                           target="_blank"
                           style="color: #111111; font-weight: 700"
-                          >Dashboard</a
-                        >
+                          >Dashboard</a>
                         –
                         <a
-                          href={{ orgs/[id]/apps }}
+                          href="{{ serviceHost }}/orgs/{{ organizationId }}/apps"
                           target="_blank"
                           style="color: #111111; font-weight: 700"
-                          >Apps</a
-                        >
+                          >Apps</a>
                         –
                         <a
                           href="https://docs.github.com/ko/get-started/learning-about-github/access-permissions-on-github"
                           target="_blank"
                           style="color: #111111; font-weight: 700"
-                          >Permissions</a
-                        >
+                          >Permissions</a>
                       </p>
                     </td>
                   </tr>
