--- a/public/emails/signIn.html
+++ b/public/emails/signIn.html
@@ -268,8 +268,8 @@
                     Welcome to Scodi! You’re taking an important next step to manage SaaS.<br/>
                     Take a look around, test exclusive features.<br/>
                     (add apps that you want to manage or see how much you've spend)<br/>
-                    <a href="{{ serviceHost }}/orgs/{{ organizationId }}/home">
-                    <button style="margin-top: 30px; padding: 15px; background-color: #bcbbbb; border-radius: 3px; color: white; font-weight: bold; width: 700px; font-size: 24px;">Start with Scodi</button>
+                    <a href="{{ serviceHost }}/users/login">
+                    <button style="cursor: pointer; margin-top: 30px; padding: 15px; background-color: #bcbbbb; border-radius: 3px; color: white; font-weight: bold; width: 700px; font-size: 24px;">Start with Scodi</button>
                     </a>
                   </td>
                   </tr>
@@ -318,13 +318,13 @@
                     >
                       <p style="margin: 0">
                         <a
-                          href="{{ serviceHost }}/orgs/{{ organizationId }}/home"
+                          href="{{ serviceHost }}/users/login"
                           target="_blank"
                           style="color: #111111; font-weight: 700"
                           >Dashboard</a>
                         –
                         <a
-                          href="{{ serviceHost }}/orgs/{{ organizationId }}/apps"
+                          href="{{ serviceHost }}/users/login"
                           target="_blank"
                           style="color: #111111; font-weight: 700"
                           >Apps</a>
