이메일 템플릿 및 에셋 엑세스 주소를 S3 로 변경

--- a/public/emails/approval.html
+++ b/public/emails/approval.html
@@ -151,7 +151,7 @@
                       <a href="{{ serviceHost }}" target="_blank">
                         <img
                           alt="Logo"
-                          src="{{ serviceHost }}/logo-transparent.png"
+                          src="https://payplo-service.s3.ap-northeast-2.amazonaws.com/email-templates/assets/logo-transparent.png"
                           style="
                             display: block;
                             width: 100px;
