--- a/public/emails/signIn.html
+++ b/public/emails/signIn.html
@@ -151,7 +151,7 @@
                       <a href="{{ serviceHost }}" target="_blank">
                         <img
                           alt="Logo"
-                          src="{{ serviceHost }}/logo-transparent.png"
+                          src="https://payplo-service.s3.ap-northeast-2.amazonaws.com/email-templates/assets/logo-transparent.png"
                           style="
                             display: block;
                             width: 100px;
@@ -212,7 +212,7 @@
                         line-height: 48px;
                         "
                     >
-                      <img src="{{ serviceHost }}/images/illustration/big-isolated-employee-working-office-workplace-flat-illustration/Mar-Business_1-800px.png">
+                      <img src="https://payplo-service.s3.ap-northeast-2.amazonaws.com/email-templates/assets/images/illustration/big-isolated-employee-working-office-workplace-flat-illustration/Mar-Business_1-800px.png">
                       <h1
                         style="font-size: 48px; font-weight: bolder; margin: 0"
                       >
